# deafrica_water_quality

./: .cspell.json  .env  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  compose_dev.yaml  compose_prod.yaml  environment.yaml  example_config.yaml  flake.nix  index_test_tiles.sh  jupyter_lab_config.py  micromamba_shell_hook.sh  products.csv  pyproject.toml  tiles.py
.github/workflows/: publish_docker_image.yml
.ipynb_checkpoints/: git test-checkpoint.ipynb  my branch-checkpoint.ipynb
SDG6.6.1/: SingleWaterbody_LakeMweru-Test2.ipynb  SingleWaterbody_LakeMweru.ipynb  Waterbody_WQ_timeseries.ipynb  lakemweru.geojson
WP 2.1/: WQ package 2.1.ipynb
WP1.2/: WQ package 1.2.ipynb  Water_quality_FAI.ipynb  _Build_annual_dataset-1.0.ipynb  _WQ_functions.py  dummy.md
WP1.2/.ipynb_checkpoints/: WQ package 1.2-checkpoint.ipynb  _Build_annual_dataset-1.0-checkpoint.ipynb  _WQ_functions-checkpoint.py
WP1.3/: SingleTileTest.ipynb  wp13_ds.nc
WP1.4/: WP1.4.ipynb  wq_normalisation_parameters.json
WP1.4/.ipynb_checkpoints/: wq_normalisation_parameters-checkpoint.json
WP2.1/: QA_functions.ipynb  WP2.1.ipynb  exploring.ipynb
WP2.2/: WP2.2.ipynb
docker/: Dockerfile  environment.yaml  environment_dev.yaml  environment_prod.yaml  requirements.txt  requirements_dev.txt  requirements_prod.txt
docker/assets/: entrypoint.sh  jupyter_lab_config.py  jupyter_server_config.py
docs/: placeholder.md
products/: products.csv  wqs_annual.odc-product.yaml  wqs_annual_v1.odc-product.yaml  wqs_products.csv
reference_data/: sensor bands-msi.csv  sensor bands-tm.csv
scripts/: get_bbox.py
src/water_quality/: africa_extent.py  config.py  datasets.py  date.py  dates.py  grid.py  hue.py  instruments.py  io.py  load_data.py  logs.py  magics.py  optical_water_type.py  pixel_corrections.py  sdg_reporting.py  tasks.py  tiling.py  water_detection.py  waterbodies.py  wq_algorithms.py
src/water_quality/cli/: common.py  generate_tasks.py  generate_tiles.py  get_version.py  list_test_areas.py  metadata_generator.py  process_annual_wq_variables.py  process_short_term_wq_variables.py  process_wq_variables.py
src/water_quality/data/: Vagelis_OWT_allwaters_mean_standardised.csv  msi_OWT_vectors.csv  msi_agm_OWT_vectors.csv  oli_OWT_vectors.csv  oli_agm_OWT_vectors.csv  places.parquet  process_annual_wq_variables.py  sensor bands-oli.csv  sensor bands-tm.csv  tiles_and_waterbody_uids.py  tm_OWT_vectors.csv  tm_agm_OWT_vectors.csv  update_places.py
src/water_quality/mapping/: algorithms.py  config.py  fai.py  hue.py  instruments.py  load_data.py  ndvi.py  optical_water_type.py  pixel_correction.py  water_detection.py
src/water_quality/metadata/: easi_assemble.py  prepare_metadata.py  product.py
src/water_quality/monitoring/: change.py  load_data.py  plotting.py  qa.py  state.py
tests/: conftest.py  test_datasets.py  test_hue.py  test_instruments.py  test_load_data.py  test_logs.py  test_pixel_corrections.py  test_water_detection.py
tests/data/: places.parquet  wq_agm_mutli_sensor_dataset.nc  wq_agm_mutli_sensor_dataset_hue_calc.nc  wq_agm_mutli_sensor_dataset_pixel_correction.nc  wq_agm_mutli_sensor_dataset_water_analysis.nc  wq_dataset_multi_instrument.nc  wq_dataset_single_instrument.nc
